@@ -6,6 +6,7 @@ Revision history for Perl extension Statistics::R.
     - Tests for heredocs and for loops
     - Tests expecting a specific output
     - The run() method now accepts an array of strings as input
+    - New run_from_file() method to read and execute commands from an R file
 
 0.21  2011-09-04
     - Tweaked the regular expressions that parse the R output stream for added
